<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SightLocator</string>
    
    <!-- Action Bar buttons and Option Menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_button_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_button_about">About</string>
    <string name="action_filter">Filter</string>
    <string name="action_button_filter">Filter</string>
    
    <!-- Filter Categories list -->
    <string-array name="marker_category">
        <item >ALL</item>
        <item >Religion</item>
        <item >History</item>
        <item >Monument</item>
        <item >Literature</item>
        <item >Cafe</item>
        <item >Entertaiment</item>
        <item >Industry</item>
    </string-array>
    
	<!-- Filter Categories Dialog buttons -->
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    
    <!-- Filter Categories Dialog title and message -->
    <string name="dialog_title">Display markers</string>
    <string name="dialog_message">Do we need a  message?</string>
    
    
    <string name="welcome_screen_text">The mobile development community is at a tipping point. Mobile users demand more choice, more opportunities to customize their phones, and more functionality. Mobile operators want to provide value-added content to their subscribers in a manageable and lucrative way. Mobile developers want the freedom to develop the powerful mobile applications users demand with minimal roadblocks to success. Finally, handset manufacturers want a stable, secure, and affordable platform to power their devices. Upuntil now single mobile platform has adequately addressed the needs of all the parties. Enter Android, which is a potential game-changer for the mobile development community. An innovative and open platform, Android is well positioned to address the growing needs of the mobile marketplace.</string>
    <string name="sts_olha_and_elisabeth">The Church of Sts. Olha and Elizabeth in Lviv, Ukraine, is located between the citys main rail station and the Old Town. It was originally built as the Roman Catholic Church of St. Elizabeth and today serves as the Greek Catholic Church of Sts. Olha and Elizabeth. The church was built by the Latin Archbishop of Lviv Saint Joseph Bilczewski in the years 1903&#8211;1911 as a parish church for the dynamically developing western suburb. It was designed by Polish architect Teodor Talowski</string>
    <string name="railway_station_wiki">The Main railway station in Lviv, Ukraine also known as Lviv-Main. It is one of the most notable pieces of Art Nouveau architecture in former Galicia. The station was opened to the public in 1904, and celebrated its centennial anniversary on 26 March 2004. On a monthly basis, the terminal handles over 1.2 million passengers and moves 16 thousand tons of freight.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="softserve_office_4">SoftServe Inc. is a leading global outsourcing product and application development company dedicated to empowering businesses worldwide by providing end-to-end capabilities from product concept to completion. We are motivated and inspired to leverage advanced software technologies to accelerate your growth, strengthen your market position and exceed your customer\'s expectations. We\'ve created an internal ecosystem that combines our experience, intelligence and best practices with your needs and insights, building strong partnerships, delivering quality products and services, and giving you a competitive edge in your marketplace. Our mission is to be a strategic partner in product and application development providing our clients with innovation, faster time to market, and end-to-end capabilities from product concept to completion. As a leading global outsourced product and application development company, SoftServe, Inc. has several centers of excellence with dedicated domain and technology experts, with our corporate strategy to best serve our clients, employees and overall business objectives.</string>
    <string name="imageview_tag_uri">0</string>
    <string name="full_screen_activity_title">Info</string>
    <string name="help_activity_title">Help</string>
    <string name="help_activity_content">Here comes some suggestions how to have pleasure while using Sight Locator:\n\n 1. Use it\n 2. Share it among friends\n 3. Click evrywhere\n 4. Explore it</string>
    <string name="address">Address : to do</string>
    <string name="object_title"></string>

    <!-- Content languages list -->
    <string-array name="content_language">
        <item >English</item>
        <item >Українська</item>
    </string-array>
    
    <!-- Content languages abbreviations list -->
    <string-array name="content_language_abbr">
        <item >en</item>
        <item >uk</item>
    </string-array>
    
    <!-- Content languages dialog title and message -->
    <string name="content_lang_dialog_title">Content language</string>
    <string name="content_lang_dialog_message">Please choose language for content.</string>
    
    <!-- SharedPreferences -->
    <string name="content_language">content language</string>
    
    
    <!-- DEPRECATED - values used for checkboxes -->
    <string name="action_filter_all">ALL</string>
    <string name="action_filter_religion">Religion</string>
    <string name="action_filter_history">History</string>
    <string name="action_filter_literature">Literature</string>
    <string name="action_filter_industry">Industry</string>
    <string name="action_filter_cafe">Cafe</string>
    <string name="action_filter_entertaiment">Entertaiment</string>
    <string name="action_filter_monument">Monument</string>

    
</resources>
