<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_quick_filter"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="ifRoom"
        android:title="@string/action_button_filter"/>
    
    <!--item
        android:id="@+id/action_quick_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/action_button_about"/>
    
    <item
        android:id="@+id/action_quick_help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/action_button_help"/-->
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_filter"/>
    <!--item
        android:id="@+id/action_languages_dialog"
        android:icon="@drawable/ic_languages_dialog"
        android:showAsAction="ifRoom"
        android:title="@string/content_lang_dialog_title"/-->

</menu>
